--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "webpack:server": "webpack --config webpack.server.config.js --progress --colors"
   },
   "private": true,
   "dependencies": {
@@ -19,17 +20,21 @@
     "@angular/http": "^6.1.10",
     "@angular/platform-browser": "^6.1.10",
     "@angular/platform-browser-dynamic": "^6.1.10",
+    "@angular/platform-server": "^7.1.1",
     "@angular/router": "^6.1.10",
     "@ngrx/effects": "^6.1.2",
     "@ngrx/router-store": "^6.1.2",
     "@ngrx/store": "^6.1.2",
     "@ngrx/store-devtools": "^6.1.2",
+    "@nguniversal/module-map-ngfactory-loader": "^7.0.2",
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.4",
+    "express": "^4.16.4",
     "firebase": "^5.5.9",
     "ngrx": "^2.0.1",
     "node-pre-gyp": "^0.11.0",
     "rxjs": "^6.3.3",
+    "ts-loader": "^5.3.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -37,7 +42,7 @@
     "@angular/cli": "~6.0.7",
     "@angular/compiler-cli": "^6.1.10",
     "@angular/language-service": "^6.1.10",
-    "@types/jasmine": "^2.8.12",
+    "@types/jasmine": "2.5.38",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
@@ -51,6 +56,7 @@
     "protractor": "^5.4.1",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "typescript": "~2.7.2",
+    "webpack-cli": "^3.1.2"
   }
 }
